manifests/doc-index-updater/overlays/dev/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: doc-index-updater
spec:
  hosts:
    - doc-index-updater-dev.test.mhra.gov.uk
